[gd_scene load_steps=25 format=2]

[ext_resource path="res://pics/background.jpg" type="Texture" id=1]
[ext_resource path="res://pics/tucay_only.png" type="Texture" id=2]
[ext_resource path="res://pics/petri_input_tucay.png" type="Texture" id=3]
[ext_resource path="res://pics/tu_monap.png" type="Texture" id=4]
[ext_resource path="res://pics/tu_dongnap.png" type="Texture" id=5]
[ext_resource path="res://sences/clock.tscn" type="PackedScene" id=6]
[ext_resource path="res://fonts/BeVietnamPro-Italic.ttf" type="DynamicFontData" id=7]
[ext_resource path="res://fonts/BeVietnamPro-Bold.ttf" type="DynamicFontData" id=8]
[ext_resource path="res://pics/nentrang.png" type="Texture" id=9]
[ext_resource path="res://sound/mouse_click.mp3" type="AudioStream" id=10]
[ext_resource path="res://pics/logo_NTU.png" type="Texture" id=17]
[ext_resource path="res://sences/umau.gd" type="Script" id=18]

[sub_resource type="Curve2D" id=4]
_data = {
"points": PoolVector2Array( 0, 0, 0, 0, 908, 609, 0, 0, 0, 0, 916, 419, 0, 0, 0, 0, 577, 419, 0, 0, 0, 0, 242, 419, 0, 0, 0, 0, 248, 476 )
}

[sub_resource type="CapsuleShape2D" id=3]
radius = 220.831
height = 460.04

[sub_resource type="DynamicFont" id=10]
size = 18
font_data = ExtResource( 7 )

[sub_resource type="DynamicFont" id=11]
size = 20
font_data = ExtResource( 8 )

[sub_resource type="StyleBoxFlat" id=12]
bg_color = Color( 0.282353, 0.415686, 0.827451, 1 )

[sub_resource type="StyleBoxFlat" id=13]
bg_color = Color( 0.27451, 0.231373, 0.937255, 1 )

[sub_resource type="StyleBoxEmpty" id=9]

[sub_resource type="StyleBoxEmpty" id=7]

[sub_resource type="DynamicFont" id=14]
size = 20
font_data = ExtResource( 8 )

[sub_resource type="StyleBoxFlat" id=15]
bg_color = Color( 0.196078, 0.317647, 0.901961, 1 )

[sub_resource type="StyleBoxFlat" id=16]
bg_color = Color( 0.101961, 0.168627, 0.913725, 1 )

[sub_resource type="StyleBoxEmpty" id=6]

[node name="tucay" type="Node2D"]
script = ExtResource( 18 )

[node name="background" type="Sprite" parent="."]
position = Vector2( 594, 358 )
scale = Vector2( 0.216557, 0.194627 )
texture = ExtResource( 1 )

[node name="tucay" type="Sprite" parent="."]
position = Vector2( 856.5, 446.5 )
scale = Vector2( 0.426282, 0.376866 )
texture = ExtResource( 2 )

[node name="tuu" type="TextureRect" parent="."]
margin_left = -49.0
margin_top = 4.0
margin_right = 523.0
margin_bottom = 705.0
expand = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="monap" type="Sprite" parent="tuu"]
position = Vector2( 287, 448.625 )
scale = Vector2( 1.81513, 1.69624 )
texture = ExtResource( 4 )

[node name="ar_monap" type="Area2D" parent="tuu/monap"]
collision_layer = 8
collision_mask = 4

[node name="co_monap" type="CollisionPolygon2D" parent="tuu/monap/ar_monap"]
position = Vector2( 0, -4.25012 )
scale = Vector2( 1, 1.125 )
polygon = PoolVector2Array( -38.0287, 29.8832, 47.0017, 25.8387, 47.8564, 26.5741, -35.8923, 29.7821 )

[node name="dongnap" type="Sprite" parent="tuu"]
visible = false
position = Vector2( 287, 448.625 )
scale = Vector2( 1.815, 1.696 )
texture = ExtResource( 5 )

[node name="path2d" type="Path2D" parent="."]
position = Vector2( 4, 6 )
curve = SubResource( 4 )

[node name="path_petri" type="PathFollow2D" parent="path2d"]
position = Vector2( 908, 609 )
rotation = -1.5481
rotate = false
cubic_interp = false
loop = false

[node name="petri" type="Sprite" parent="path2d/path_petri"]
position = Vector2( -26.0684, -0.341309 )
rotation = 1.5481
scale = Vector2( 0.0701041, 0.0930595 )
texture = ExtResource( 3 )

[node name="ar_petri" type="Area2D" parent="path2d/path_petri/petri"]
collision_layer = 4
collision_mask = 8

[node name="co_petri" type="CollisionShape2D" parent="path2d/path_petri/petri/ar_petri"]
rotation = 1.5708
shape = SubResource( 3 )

[node name="logo" type="TextureRect" parent="."]
margin_left = 14.0
margin_top = 14.0
margin_right = 94.0
margin_bottom = 94.0
texture = ExtResource( 17 )
expand = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="clock" parent="." instance=ExtResource( 6 )]
position = Vector2( 1108, 63 )
scale = Vector2( 0.1, 0.1 )

[node name="error" type="TextureRect" parent="."]
visible = false
modulate = Color( 0.435294, 0.403922, 0.403922, 1 )
margin_left = 673.0
margin_top = 271.0
margin_right = 1001.0
margin_bottom = 469.0
texture = ExtResource( 9 )
expand = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="lbl_error" type="Label" parent="."]
visible = false
margin_left = 687.0
margin_top = 287.0
margin_right = 993.0
margin_bottom = 405.0
custom_fonts/font = SubResource( 10 )
align = 1
valign = 1
autowrap = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="but_start" type="Button" parent="."]
visible = false
margin_left = 798.0
margin_top = 429.0
margin_right = 904.0
margin_bottom = 463.0
mouse_default_cursor_shape = 2
custom_colors/font_color = Color( 1, 1, 1, 1 )
custom_fonts/font = SubResource( 11 )
custom_styles/hover = SubResource( 12 )
custom_styles/pressed = SubResource( 13 )
custom_styles/focus = SubResource( 9 )
custom_styles/normal = SubResource( 7 )
toggle_mode = true
text = "Tiếp theo"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="but_open" type="Button" parent="."]
visible = false
margin_left = 820.0
margin_top = 430.0
margin_right = 890.0
margin_bottom = 464.0
mouse_default_cursor_shape = 2
custom_colors/font_color = Color( 1, 1, 1, 1 )
custom_fonts/font = SubResource( 14 )
custom_styles/hover = SubResource( 15 )
custom_styles/pressed = SubResource( 16 )
custom_styles/focus = SubResource( 9 )
custom_styles/disabled = SubResource( 6 )
custom_styles/normal = SubResource( 7 )
toggle_mode = true
text = "Mở tủ"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="sound" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 10 )

[connection signal="area_entered" from="tuu/monap/ar_monap" to="." method="_on_ar_monap_area_entered"]
[connection signal="mouse_entered" from="path2d/path_petri/petri/ar_petri" to="." method="_on_ar_petri_mouse_entered"]
[connection signal="button_up" from="but_start" to="." method="_on_but_start_button_up"]
[connection signal="button_up" from="but_open" to="." method="_on_but_open_button_up"]
